# Agentic-Doc-Search-RAG

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  save_graph.py
data/security-and-technology-policies/: access-management-policy.md  audit-logging-policy.md  change-management-policy.md  penetration-testing-policy.md  security-and-technology-policies-management.md  software-development-lifecycle-policy.md
mcp-server/: mcp_server.py
src/: config.py  data_ingestion.py  graph.py  prompts.py  schema.py  state.py  vector_store.py
